# rag-search-engine

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
cli/: keyword_search_cli.py
cli/lib/: keyword_search.py  utils.py
data/: KO_0001628280-26-010047.json  KO_0001628280-26-010047.md  sample.md
db/: client.py  init.sql  repository.py
src/rag_engine/: cli.py  config.py  data_loader.py  filing_types.py  index.py  llm.py  models.py  preprocessing.py  search.py
src/rag_engine/agent/: loop.py  tools.py
src/rag_engine/cli/: agent.py  evaluation.py  filing.py  hybrid.py  image.py  keyword.py  rag.py  semantic.py
src/rag_engine/embedding/: chunker.py  metadata.py  semantic.py  topics.py  utils.py
src/rag_engine/evaluation/: metrics.py  runner.py
src/rag_engine/filing_search/: fusion.py  pipeline.py
src/rag_engine/generation/: pipeline.py
src/rag_engine/hybrid/: pipeline.py  search.py
src/rag_engine/image/: search.py
src/rag_engine/keyword/: search.py
src/rag_engine/query_processing/: evaluator.py  reranker.py  rewriter.py
src/rag_engine/query_processing/prompts/: batch.md  evaluate.md  expand.md  individual.md  rewrite.md  spell.md  spelling.md
src/rag_engine/query_processing/prompts/agent/: generate.md  pick_tool.md
src/rag_engine/query_processing/prompts/evaluation/: evaluate.md
src/rag_engine/query_processing/prompts/generation/: answer_question.md  answer_question_detailed.md  answer_with_citations.md  summarization.md
src/rag_engine/query_processing/prompts/image/: describe.md
src/rag_engine/query_processing/prompts/reranking/: batch.md  individual.md
src/rag_engine/query_processing/prompts/rewriting/: expand.md  rewrite.md  spell.md
src/rag_engine/semantic/: embedder.py  search.py  semantic_search.py  vector_db.py
