[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "basedpyright>=1.39.8",
    "google-genai>=2.10.0",
    "nltk>=3.9.4",
    "numpy>=2.5.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.18",
    "sentence-transformers>=5.6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[project.scripts]
keyword  = "rag_engine.cli.keyword:main"
semantic = "rag_engine.cli.semantic:main"
hybrid = "rag_engine.cli.hybrid:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "ANN", "B", "D", "E", "F", "I", "RUF", "S", "SIM", "UP",
    "C4", "FA", "ICN", "ISC", "NPY", "PTH", "TC", "TID", "W"
]
ignore = ["ANN401", "D100", "D101", "D102", "D103", "D104", "D107", "D203", "D213", "D212", "D205", "S101"]

# --- Basedpyright configuration goes here ---
[tool.basedpyright]
typeCheckingMode = "standard"
venvPath = "."
extraPaths=["src"]
venv = ".venv"
exclude=[".venv", ".git", "__pycache__", "data", "cache", ".ruff_cache"]
useLibraryCodeForTypes = false
